--- a/package.json
+++ b/package.json
@@ -2,29 +2,40 @@
   "name": "apex-docs",
   "version": "0.1.0",
   "private": true,
+  "resolutions": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
   "scripts": {
-    "dev": "next dev --turbopack --port 5000",
+    "dev": "next dev --turbo --port 5000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@apexcura/core": "^0.0.17-Beta1604",
+    "@apexcura/ui-builder": "^0.0.27",
     "@heroui/react": "2.6.14",
+    "@reduxjs/toolkit": "1.9.5",
     "motion": "^12.0.3",
-    "next": "15.1.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^14.1.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
-    "react-syntax-highlighter": "^15.6.1"
+    "react-redux": "8.1.3",
+    "react-router-dom": "7.5.1",
+    "react-syntax-highlighter": "^15.6.1",
+    "redux-persist": "6.0.0",
+    "redux-thunk": "3.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/redux-persist": "^4.3.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
