--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@apexcura/core": "^0.0.17-Beta1604",
-    "@apexcura/ui-builder": "^0.0.27",
+    "@apexcura/ui-builder": "^0.0.31",
     "@heroui/react": "2.6.14",
     "@reduxjs/toolkit": "1.9.5",
     "motion": "^12.0.3",
@@ -26,6 +26,7 @@
     "react-redux": "8.1.3",
     "react-router-dom": "7.5.1",
     "react-syntax-highlighter": "^15.6.1",
+    "redux": "^5.0.1",
     "redux-persist": "6.0.0",
     "redux-thunk": "3.1.0"
   },
